# Banking_Management

./: .gitignore  ATM_Technical_Report.html  CMakeLists.txt  DISTRIBUTED_SYSTEM_GUIDE.md  Makefile  README.md  TECHNICAL_REPORT.md  generate_html_pdf.sh  generate_pdf.sh  manual_pdf_generation.sh  style.css  test_db.cpp  test_system.sh
ATM_Machine/: Makefile  README.md
ATM_Machine/include/: ATMClient.h  JsonHandler.h  NetworkProtocol.h
ATM_Machine/src/: ATMClient.cpp  Encryption.cpp  atm_main.cpp
include/: Account.h  BankServer.h  BankSystem.h  Common.h  DatabaseHandler.h  DeadlockPrevention.h  Encryption.h  Security.h  SyncManager.h  Transaction.h  User.h
sql/: schema.sql  sqlite_schema.sql
src/: Account.cpp  BankServer.cpp  BankSystem.cpp  DatabaseHandler.cpp  DeadlockPrevention.cpp  JsonHandler.cpp  NetworkProtocol.cpp  Security.cpp  SyncManager.cpp  Transaction.cpp  User.cpp  bank_server_main.cpp  main.cpp
